# Alkaid

./: .env.local.example  .gitignore  README.md  package.json  start-dev.bat  start-dev.command
Alkaid-python/: .env.example  .env.server.example  .gitignore  Makefile  README.md  pyproject.toml
Alkaid-python/apps/core/: errors.py  logging.py  responses.py  views.py
Alkaid-python/apps/integrations/: README.md  auth.py  contracts.py  executor.py  http.py  http_payload.py  retry_policy.py  workbench.py
Alkaid-python/apps/jobs/: admin.py  commands.py  compatibility.py  creation.py  dispatch.py  errors.py  http.py  job_logs.py  lifecycle.py  mock_state.py  models.py  retention.py  serializers.py  services.py  specs.py  sse.py  steps.py  task_runner.py  tasks.py  urls.py  views.py
Alkaid-python/apps/mock_data/: __init__.py  application_generator.py
Alkaid-python/apps/portal/: models.py  schemas.py  services.py  urls.py  views.py
Alkaid-python/apps/product_data/: README.md  apps.py  catalog.py  catalog_compat.py  catalog_loader.py  catalog_models.py  catalog_validation.py  execution_config.py  handler_codes.py  schemas.py  services.py  tasks.py  urls.py  views.py
Alkaid-python/apps/workbench/: apps.py  models.py  schemas.py  services.py  urls.py  views.py
Alkaid-python/apps/workflows/: admin.py  models.py  schemas.py  services.py  tasks.py  urls.py  views.py
Alkaid-python/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
Alkaid-python/config/settings/: base.py  (+3 more)
Alkaid-python/scripts/: check_architecture.py  compile_product_config.py  run_dev_server.py  run_server.py  verify_celery_runtime.py
Alkaid-python/tests/: test_api.py  test_application_link_api.py  test_application_link_integration.py  test_business_features.py  test_catalog_and_messages.py  test_dev_server.py  test_http_client.py  test_job_http_audit.py  test_job_sse.py  test_jobs.py  test_portal.py  test_product_application_api.py  test_product_data_mock_tools.py  test_product_execution_config.py  test_runtime_mode.py  test_token_auth.py  test_verification_approval_integration.py  test_workbench.py  test_workflow_api.py  test_workflow_tasks.py
(+349 files in other folders)
