[project]
name = "workflow-backend"
version = "0.1.0"
description = "A modular Django and Celery backend for typed workflow orchestration"
requires-python = ">=3.10,<3.14"
dependencies = [
    "celery>=5.5,<6",
    "django==4.1.13",
    "httpx>=0.28,<1",
    "pydantic>=2.11,<3",
    "pymysql>=1.1,<2",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-django>=4.11,<5",
    "ruff>=0.12,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-django>=4.11,<5",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]
