[project]
name = "alkaid-backend"
version = "0.1.0"
description = "Alkaid product application and external-system integration backend"
requires-python = ">=3.10,<3.11"
dependencies = [
    "celery>=5.5,<6",
    "django==4.1.13",
    "httpx>=0.28,<1",
    "pydantic>=2.11,<3",
    "pymysql>=1.1,<2",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.3,<9",
    "pytest-django>=4.11,<5",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
show_error_codes = true
files = [
    "apps/jobs/specs.py",
    "apps/jobs/commands.py",
    "apps/integrations/contracts.py",
    "apps/integrations/*/models.py",
    "apps/product_data/*/schemas.py",
]

[[tool.mypy.overrides]]
module = ["apps.jobs.models"]
follow_imports = "skip"
ignore_errors = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
